@@ -564,6 +564,11 @@ Bug fixes
 * LUCENE-3365: Create or Append mode determined before obtaining write lock
   can cause IndexWriter overriding an existing index.
   (Geoff Cooney via Simon Willnauer)
+
+* LUCENE-3380: Fixed a bug where FileSwitchDirectory's listAll() would wrongly
+  throw NoSuchDirectoryException when all files written so far have been
+  written to one directory, but the other still has not yet been created on the
+  filesystem.  (Robert Muir)
   
 New Features
 
